Fixed rows.Err must be checked and removed unused API endpoint
